--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -785,6 +785,11 @@ video {
   margin-bottom: 13rem;
 }
 
+.mx-10{
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
 .mb-10{
   margin-bottom: 2.5rem;
 }
@@ -843,6 +848,22 @@ video {
 
 .mt-auto{
   margin-top: auto;
+}
+
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
+.mb-16{
+  margin-bottom: 4rem;
+}
+
+.mb-\[16\%\]{
+  margin-bottom: 16%;
+}
+
+.mb-\[10\%\]{
+  margin-bottom: 10%;
 }
 
 .block{
@@ -979,6 +1000,18 @@ video {
   height: 300px;
 }
 
+.h-\[\%21\]{
+  height: %21;
+}
+
+.h-\[21\%\]{
+  height: 21%;
+}
+
+.h-\[10vh\]{
+  height: 10vh;
+}
+
 .max-h-0{
   max-height: 0px;
 }
@@ -1001,6 +1034,14 @@ video {
 
 .min-h-screen{
   min-height: 100vh;
+}
+
+.min-h-\[50vh\]{
+  min-height: 50vh;
+}
+
+.min-h-full{
+  min-height: 100%;
 }
 
 .w-0{
@@ -1108,6 +1149,50 @@ video {
 
 .w-3\/4{
   width: 75%;
+}
+
+.w-\[90\%\]{
+  width: 90%;
+}
+
+.w-\[90vw\]{
+  width: 90vw;
+}
+
+.w-\[300px\]{
+  width: 300px;
+}
+
+.w-\[10\%\]{
+  width: 10%;
+}
+
+.w-\[100\%\]{
+  width: 100%;
+}
+
+.w-\[20\%\]{
+  width: 20%;
+}
+
+.w-\[5\%\]{
+  width: 5%;
+}
+
+.w-\[8\%\]{
+  width: 8%;
+}
+
+.w-\[7\%\]{
+  width: 7%;
+}
+
+.w-\[7\.5\%\]{
+  width: 7.5%;
+}
+
+.w-\[calc\(10\%-2\.5rem\)\]{
+  width: calc(10% - 2.5rem);
 }
 
 .min-w-0{
@@ -1416,6 +1501,16 @@ video {
   border-bottom-left-radius: 1rem;
 }
 
+.rounded-l-3xl{
+  border-top-left-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+}
+
+.rounded-r-3xl{
+  border-top-right-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+}
+
 .border{
   border-width: 1px;
 }
@@ -1559,6 +1654,14 @@ video {
 
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
+}
+
+.bg-opacity-5{
+  --tw-bg-opacity: 0.05;
+}
+
+.bg-opacity-30{
+  --tw-bg-opacity: 0.3;
 }
 
 .bg-gradient-to-b{
@@ -1935,6 +2038,11 @@ video {
   padding-bottom: 10vh;
 }
 
+.px-\[13\%\]{
+  padding-left: 13%;
+  padding-right: 13%;
+}
+
 .pb-10{
   padding-bottom: 2.5rem;
 }
@@ -1991,8 +2099,28 @@ video {
   padding-top: 20vh;
 }
 
+.pb-\[21\%\]{
+  padding-bottom: 21%;
+}
+
+.pl-\[13\%\]{
+  padding-left: 13%;
+}
+
+.pb-\[13\%\]{
+  padding-bottom: 13%;
+}
+
+.pl-\[21\%\]{
+  padding-left: 21%;
+}
+
 .text-center{
   text-align: center;
+}
+
+.text-start{
+  text-align: start;
 }
 
 .align-baseline{
