--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -1036,6 +1036,10 @@ video {
   height: 1rem;
 }
 
+.h-\[400vh\]{
+  height: 400vh;
+}
+
 .max-h-0{
   max-height: 0px;
 }
@@ -1635,6 +1639,11 @@ video {
   border-color: rgb(47 54 133 / var(--tw-border-opacity));
 }
 
+.border-white{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .bg-accent{
   --tw-bg-opacity: 1;
   background-color: rgb(19 21 24 / var(--tw-bg-opacity));
@@ -1707,6 +1716,11 @@ video {
 .bg-yellow-500{
   --tw-bg-opacity: 1;
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+}
+
+.bg-emerald-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-0{
