--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -649,8 +649,16 @@ video {
   bottom: 0.25rem;
 }
 
+.bottom-\[20vh\]{
+  bottom: 20vh;
+}
+
 .bottom-auto{
   bottom: auto;
+}
+
+.end-0{
+  inset-inline-end: 0px;
 }
 
 .left-0{
@@ -671,6 +679,10 @@ video {
 
 .right-0{
   right: 0px;
+}
+
+.right-1{
+  right: 0.25rem;
 }
 
 .right-auto{
@@ -695,46 +707,6 @@ video {
 
 .top-auto{
   top: auto;
-}
-
-.bottom-\[10vh\]{
-  bottom: 10vh;
-}
-
-.right-1\/2{
-  right: 50%;
-}
-
-.right-1{
-  right: 0.25rem;
-}
-
-.bottom-\[20vh\]{
-  bottom: 20vh;
-}
-
-.bottom-\[10\%\]{
-  bottom: 10%;
-}
-
-.left-\[10\%\]{
-  left: 10%;
-}
-
-.bottom-\[20\%\]{
-  bottom: 20%;
-}
-
-.bottom-\[21\%\]{
-  bottom: 21%;
-}
-
-.left-\[13\%\]{
-  left: 13%;
-}
-
-.end-0{
-  inset-inline-end: 0px;
 }
 
 .z-0{
@@ -777,6 +749,11 @@ video {
   margin: 1.25rem;
 }
 
+.mx-10{
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
 .mx-52{
   margin-left: 13rem;
   margin-right: 13rem;
@@ -797,17 +774,24 @@ video {
   margin-bottom: 13rem;
 }
 
-.mx-10{
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-}
-
 .mb-10{
   margin-bottom: 2.5rem;
 }
 
+.mb-16{
+  margin-bottom: 4rem;
+}
+
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
 .mb-52{
   margin-bottom: 13rem;
+}
+
+.mb-\[10\%\]{
+  margin-bottom: 10%;
 }
 
 .mb-\[10vh\]{
@@ -862,22 +846,6 @@ video {
   margin-top: auto;
 }
 
-.mb-5{
-  margin-bottom: 1.25rem;
-}
-
-.mb-16{
-  margin-bottom: 4rem;
-}
-
-.mb-\[16\%\]{
-  margin-bottom: 16%;
-}
-
-.mb-\[10\%\]{
-  margin-bottom: 10%;
-}
-
 .block{
   display: block;
 }
@@ -910,16 +878,16 @@ video {
   display: none;
 }
 
+.aspect-\[2\/1\]{
+  aspect-ratio: 2/1;
+}
+
 .aspect-square{
   aspect-ratio: 1 / 1;
 }
 
 .aspect-video{
   aspect-ratio: 16 / 9;
-}
-
-.aspect-\[2\/1\]{
-  aspect-ratio: 2/1;
 }
 
 .h-0{
@@ -950,6 +918,10 @@ video {
   height: 0.75rem;
 }
 
+.h-4{
+  height: 1rem;
+}
+
 .h-96{
   height: 24rem;
 }
@@ -964,6 +936,10 @@ video {
 
 .h-\[30vh\]{
   height: 30vh;
+}
+
+.h-\[400vh\]{
+  height: 400vh;
 }
 
 .h-\[50vh\]{
@@ -1004,52 +980,16 @@ video {
   height: 100vh;
 }
 
-.h-\[10px\]{
-  height: 10px;
-}
-
-.h-\[100px\]{
-  height: 100px;
-}
-
-.h-\[300px\]{
-  height: 300px;
-}
-
-.h-\[\%21\]{
-  height: %21;
-}
-
-.h-\[21\%\]{
-  height: 21%;
-}
-
-.h-\[10vh\]{
-  height: 10vh;
-}
-
-.h-4\/5{
-  height: 80%;
-}
-
-.h-4{
-  height: 1rem;
-}
-
-.h-\[400vh\]{
-  height: 400vh;
-}
-
 .max-h-0{
   max-height: 0px;
 }
 
-.max-h-screen{
-  max-height: 100vh;
-}
-
 .max-h-full{
   max-height: 100%;
+}
+
+.max-h-screen{
+  max-height: 100vh;
 }
 
 .min-h-0{
@@ -1060,21 +1000,17 @@ video {
   min-height: 300px;
 }
 
-.min-h-screen{
-  min-height: 100vh;
-}
-
-.min-h-\[50vh\]{
-  min-height: 50vh;
+.min-h-fit{
+  min-height: -moz-fit-content;
+  min-height: fit-content;
 }
 
 .min-h-full{
   min-height: 100%;
 }
 
-.min-h-fit{
-  min-height: -moz-fit-content;
-  min-height: fit-content;
+.min-h-screen{
+  min-height: 100vh;
 }
 
 .w-0{
@@ -1117,6 +1053,14 @@ video {
   width: 0.75rem;
 }
 
+.w-4{
+  width: 1rem;
+}
+
+.w-4\/5{
+  width: 80%;
+}
+
 .w-\[20vw\]{
   width: 20vw;
 }
@@ -1145,6 +1089,10 @@ video {
   width: 70px;
 }
 
+.w-\[calc\(10\%-2\.5rem\)\]{
+  width: calc(10% - 2.5rem);
+}
+
 .w-auto{
   width: auto;
 }
@@ -1170,70 +1118,6 @@ video {
 
 .w-screen{
   width: 100vw;
-}
-
-.w-\[100px\]{
-  width: 100px;
-}
-
-.w-\[10px\]{
-  width: 10px;
-}
-
-.w-3\/4{
-  width: 75%;
-}
-
-.w-\[90\%\]{
-  width: 90%;
-}
-
-.w-\[90vw\]{
-  width: 90vw;
-}
-
-.w-\[300px\]{
-  width: 300px;
-}
-
-.w-\[10\%\]{
-  width: 10%;
-}
-
-.w-\[100\%\]{
-  width: 100%;
-}
-
-.w-\[20\%\]{
-  width: 20%;
-}
-
-.w-\[5\%\]{
-  width: 5%;
-}
-
-.w-\[8\%\]{
-  width: 8%;
-}
-
-.w-\[7\%\]{
-  width: 7%;
-}
-
-.w-\[7\.5\%\]{
-  width: 7.5%;
-}
-
-.w-\[calc\(10\%-2\.5rem\)\]{
-  width: calc(10% - 2.5rem);
-}
-
-.w-4\/5{
-  width: 80%;
-}
-
-.w-4{
-  width: 1rem;
 }
 
 .min-w-0{
@@ -1286,11 +1170,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-1\/2{
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .-translate-y-1{
   --tw-translate-y: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1301,6 +1180,11 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-x-10{
+  --tw-translate-x: 2.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .translate-x-5{
   --tw-translate-x: 1.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1308,26 +1192,6 @@ video {
 
 .translate-y-1{
   --tw-translate-y: 0.25rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-\[100px\]{
-  --tw-translate-x: -100px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-\[1000px\]{
-  --tw-translate-x: -1000px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-10{
-  --tw-translate-x: 2.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-\[500px\]{
-  --tw-translate-x: -500px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1353,20 +1217,20 @@ video {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.grid-cols-5{
-  grid-template-columns: repeat(5, minmax(0, 1fr));
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .grid-cols-4{
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.grid-cols-5{
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .grid-rows-3{
@@ -1553,6 +1417,10 @@ video {
   border-radius: 1rem;
 }
 
+.rounded-3xl{
+  border-radius: 1.5rem;
+}
+
 .rounded-full{
   border-radius: 9999px;
 }
@@ -1561,16 +1429,12 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-xl{
-  border-radius: 0.75rem;
-}
-
-.rounded-3xl{
-  border-radius: 1.5rem;
-}
-
 .rounded-md{
   border-radius: 0.375rem;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
 }
 
 .rounded-l-2xl{
@@ -1659,6 +1523,11 @@ video {
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
+.bg-emerald-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
+}
+
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1718,11 +1587,6 @@ video {
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
-.bg-emerald-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-0{
   --tw-bg-opacity: 0;
 }
@@ -1739,16 +1603,16 @@ video {
   --tw-bg-opacity: 0.25;
 }
 
-.bg-opacity-50{
-  --tw-bg-opacity: 0.5;
+.bg-opacity-30{
+  --tw-bg-opacity: 0.3;
 }
 
 .bg-opacity-5{
   --tw-bg-opacity: 0.05;
 }
 
-.bg-opacity-30{
-  --tw-bg-opacity: 0.3;
+.bg-opacity-50{
+  --tw-bg-opacity: 0.5;
 }
 
 .bg-gradient-to-b{
@@ -2004,6 +1868,10 @@ video {
   fill: #000;
 }
 
+.fill-red-500{
+  fill: #ef4444;
+}
+
 .fill-white{
   fill: #fff;
 }
@@ -2079,25 +1947,18 @@ video {
   padding: 10%;
 }
 
-.p-\[10vw\]{
-  padding: 10vw;
-}
-
 .p-\[5vw\]{
   padding: 5vw;
-}
-
-.p-\[5vw_5vw_0_5vw\]{
-  padding: 5vw 5vw 0 5vw;
-}
-
-.p-\[5vw_5vw_0px_5vw\]{
-  padding: 5vw 5vw 0px 5vw;
 }
 
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.px-20{
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .px-5{
@@ -2110,9 +1971,24 @@ video {
   padding-right: 13rem;
 }
 
+.px-\[10vw\]{
+  padding-left: 10vw;
+  padding-right: 10vw;
+}
+
+.px-\[13\%\]{
+  padding-left: 13%;
+  padding-right: 13%;
+}
+
 .px-\[30\%\]{
   padding-left: 30%;
   padding-right: 30%;
+}
+
+.px-\[5vw\]{
+  padding-left: 5vw;
+  padding-right: 5vw;
 }
 
 .py-10{
@@ -2145,34 +2021,8 @@ video {
   padding-bottom: 10vh;
 }
 
-.px-\[13\%\]{
-  padding-left: 13%;
-  padding-right: 13%;
-}
-
-.px-20{
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.px-\[10vw\]{
-  padding-left: 10vw;
-  padding-right: 10vw;
-}
-
-.px-\[10vh\]{
-  padding-left: 10vh;
-  padding-right: 10vh;
-}
-
-.px-\[5vw\]{
-  padding-left: 5vw;
-  padding-right: 5vw;
-}
-
-.px-\[20vw\]{
-  padding-left: 20vw;
-  padding-right: 20vw;
+.pb-0{
+  padding-bottom: 0px;
 }
 
 .pb-10{
@@ -2227,32 +2077,12 @@ video {
   padding-top: 1.25rem;
 }
 
-.pt-\[20vh\]{
-  padding-top: 20vh;
-}
-
-.pb-\[21\%\]{
-  padding-bottom: 21%;
-}
-
-.pl-\[13\%\]{
-  padding-left: 13%;
-}
-
-.pb-\[13\%\]{
-  padding-bottom: 13%;
-}
-
-.pl-\[21\%\]{
-  padding-left: 21%;
-}
-
 .pt-\[10vh\]{
   padding-top: 10vh;
 }
 
-.pb-0{
-  padding-bottom: 0px;
+.pt-\[20vh\]{
+  padding-top: 20vh;
 }
 
 .text-center{
@@ -2499,12 +2329,12 @@ video {
   outline-color: #fecaca;
 }
 
-.outline-white{
-  outline-color: #fff;
-}
-
 .outline-red-500{
   outline-color: #ef4444;
+}
+
+.outline-white{
+  outline-color: #fff;
 }
 
 .blur{
@@ -2580,16 +2410,16 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-500{
-  transition-duration: 500ms;
-}
-
 .duration-0{
   transition-duration: 0s;
 }
 
 .duration-100{
   transition-duration: 100ms;
+}
+
+.duration-500{
+  transition-duration: 500ms;
 }
 
 body {
@@ -2671,12 +2501,6 @@ body {
 
 .hover\:z-10:hover{
   z-index: 10;
-}
-
-.hover\:scale-150:hover{
-  --tw-scale-x: 1.5;
-  --tw-scale-y: 1.5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:scale-125:hover{
