--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,63 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body {
+  background: #131518;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+#root {
+  background: linear-gradient(
+      to top right,
+      rgba(30, 39, 166, 0.2) 0%,
+      rgba(0, 0, 0, 0) 100%
+    )
+    no-repeat;
+  position: relative;
+  /* padding for footer */
+  padding-bottom: 30vh;
+}
+
+#mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 769px) {
+  #root {
+    display: none;
+  }
+
+  #mobile {
+    display: block;
+    color: white;
+    height: 100vh;
+    display: grid;
+    place-items: center;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* make scrollbar invisible */
+::-webkit-scrollbar {
+  display: none;
 }
+
+/* customize scrollbar */
+/* ::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background: #212121;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #585858;
+  border-radius: 10px;
+  width: 3px;
+  margin: 0 3px;
+  border: solid 4px #212121;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #818181;
+} */
