--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -1668,6 +1668,10 @@ body {
     inset: 50vh auto auto 15vw;
   }
 
+  .lg\:z-0 {
+    z-index: 0;
+  }
+
   .lg\:ml-auto {
     margin-left: auto;
   }
@@ -1757,5 +1761,29 @@ body {
   .lg\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .lg\:transition-all {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+  }
+
+  .lg\:duration-100 {
+    transition-duration: 100ms;
+  }
+
+  .lg\:hover\:z-10:hover {
+    z-index: 10;
+  }
+
+  .lg\:hover\:scale-125:hover {
+    --tw-scale-x: 1.25;
+    --tw-scale-y: 1.25;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:hover\:duration-500:hover {
+    transition-duration: 500ms;
   }
 }
