--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -668,6 +668,16 @@ video {
   margin: 0.5rem;
 }
 
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.mx-\[100px\] {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -888,6 +898,10 @@ video {
   min-width: 300px;
 }
 
+.min-w-0 {
+  min-width: 0px;
+}
+
 .max-w-\[100vw\] {
   max-width: 100vw;
 }
@@ -955,6 +969,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.items-stretch {
+  align-items: stretch;
 }
 
 .justify-end {
@@ -1393,6 +1411,16 @@ video {
   padding-right: 0.5rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-\[100px\] {
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
 .pb-5 {
   padding-bottom: 1.25rem;
 }
@@ -1695,6 +1723,11 @@ body {
     z-index: 0;
   }
 
+  .lg\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .lg\:ml-auto {
     margin-left: auto;
   }
@@ -1723,6 +1756,10 @@ body {
     display: none;
   }
 
+  .lg\:h-1\/2 {
+    height: 50%;
+  }
+
   .lg\:w-1\/2 {
     width: 50%;
   }
@@ -1733,6 +1770,14 @@ body {
 
   .lg\:w-\[20vw\] {
     width: 20vw;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
+
+  .lg\:w-full {
+    width: 100%;
   }
 
   .lg\:min-w-\[300px\] {
@@ -1751,8 +1796,20 @@ body {
     grid-template-rows: repeat(4, minmax(0, 1fr));
   }
 
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:flex-col {
+    flex-direction: column;
+  }
+
   .lg\:items-start {
     align-items: flex-start;
+  }
+
+  .lg\:gap-0 {
+    gap: 0px;
   }
 
   .lg\:overflow-hidden {
@@ -1776,6 +1833,11 @@ body {
   .lg\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   .lg\:pl-0 {
